# ai-interviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.local-nim.yml  docker-compose.yml  docker-run-script.sh  docker-stop-script.sh  local-run-script.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260721_0001_initial_auth_schema.py  20260721_0002_rls_policies.py  20260722_0003_auth_lookup_definer_role.py  20260722_0004_jobs.py  20260722_0005_system_actor_policies.py  20260722_0006_resumes.py  20260722_0007_question_plans.py  20260722_0008_interview_turns.py  20260722_0009_proctoring.py  20260723_0010_scores.py  20260723_0011_reports.py  20260723_0012_plan_approved_at.py
app/: main.py
app/api/: deps.py  dev.py  ops.py  routing.py
app/api/v1/: auth.py  candidates.py  interviews.py  jobs.py  proctoring.py  question_plans.py  reports.py  router.py  scores.py  users.py  webrtc.py
app/core/: config.py  dependencies.py  events.py  exceptions.py  logging.py  security.py
app/db/: base.py  rls.py  session.py
app/integrations/: email.py  nim_client.py  storage.py
app/models/: __init__.py  interview.py  job.py  org.py  proctoring.py  question_plan.py  report.py  resume.py  score.py  user.py
app/modules/: prompts.py
app/modules/auth/: invites.py  service.py  tokens.py
app/modules/interview/: checkpoint.py  service.py  state_machine.py  transcript.py
app/modules/jobs/: service.py
app/modules/proctoring/: collector.py  rules.py  verdict.py  vision.py  voice_signals.py
app/modules/question_plan/: generator.py  service.py
app/modules/reports/: candidate.py  recruiter.py  renderer.py  service.py
app/modules/resume/: chunker.py  embedder.py  parser.py  retriever.py  service.py
app/modules/scoring/: aggregator.py  confidence.py  rubric_scorer.py  service.py  transcript_pass.py
app/modules/users/: service.py
app/modules/voice/: context.py  observers.py  pipeline.py  prewarm.py  session_manager.py  transport.py  turn_detection.py
app/schemas/: auth.py  common.py  interview.py  job.py  proctoring.py  question_plan.py  report.py  resume.py  score.py  user.py  webrtc.py
app/workers/: celery_app.py  pipeline.py
app/workers/tasks/: interview_tasks.py  plan_tasks.py  report_tasks.py  (+3 more)
config/: services.cloud.yaml  services.local.yaml
config/prompts/: candidate_feedback.yaml  interviewer.yaml  plan_generator.yaml  scorer.yaml
config/templates/: candidate_report.html  recruiter_report.html
docs/: api.md  architecture.md  manual-testing.md
docs/adr/: 0001-fastapi-over-fastify.md  0002-single-process-voice.md
scripts/: bootstrap_db.sql  check_nim.py  create_rls_policies.sql  e2e_walkthrough.py  seed_data.py
static/: console.html
tests/: conftest.py
tests/e2e/: test_interview_flow.py
tests/fixtures/: make_fixtures.py  resume.docx
tests/integration/: test_auth_flow.py  test_commit_ordering.py  test_interviews.py  test_ops.py  test_plan_approval.py  test_plan_generation_live.py  test_plan_task.py  test_proctoring.py  test_proctoring_socket.py  test_question_plans.py  test_reports.py  test_resume_full_text.py  test_resume_retrieval.py  test_resume_upload.py  test_rls.py  test_scoring.py  test_session_ended_wiring.py  test_tenant_crud.py  test_voice_session.py
tests/unit/: test_confidence.py  test_email.py  test_interview_robustness.py  test_nim_catalog.py  test_pipeline.py  test_plan_generation.py  test_plan_grounding.py  test_plan_regeneration.py  test_proctoring_rules.py  test_rate_limits.py  test_refresh_rotation.py  test_report_rendering.py  test_report_separation.py  test_resume_parser.py  test_rubric_scorer.py  test_scoring_aggregation.py  test_security.py  test_state_machine.py  test_storage_presign.py  test_transcript_reconcile.py  test_voice_idle.py  test_voice_llm_params.py  test_voice_observer.py  test_voice_reconnect.py
(+4 files in other folders)
